added user error handling for login and registration
