# docs/swagger.json
@@ -74,8 +74,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/types.PostUserRegistrationHandlerResponse"
                         }
@@ -354,7 +354,7 @@
         "types.PostUserLoginHandlerResponse": {
             "type": "object",
             "properties": {
-                "session-id": {
+                "token": {
                     "type": "string"
                 }
             }
@@ -373,7 +373,7 @@
         "types.PostUserRegistrationHandlerResponse": {
             "type": "object",
             "properties": {
-                "status-ok": {
+                "status-сreated": {
                     "type": "integer"
                 }
             }
